enhance profile page, add universal background color

--- a/src/app/info-image/info-image.component.html
+++ b/src/app/info-image/info-image.component.html
@@ -1,4 +1,4 @@
 <div>
-    <img class="art-img">
-    <p>Album/Playlist Name</p>
+    <img src= "{{imgPath}}"class="art-img">
+    <p>{{text}}</p>
 </div>
