add home page with cols and start to main feed

--- a/src/app/info-image/info-image.component.css
+++ b/src/app/info-image/info-image.component.css
@@ -9,3 +9,10 @@ div {
   align-items: center;
   margin: .5em .5em;
 }
+a {
+  text-decoration: none;
+  color: black;
+}
+div:hover {
+  opacity: 75%;
+}
