add start to main feed

--- a/src/app/feed-item/feed-item.component.html
+++ b/src/app/feed-item/feed-item.component.html
@@ -1,6 +1,10 @@
 <a href="{{link}}">
-    <div>
-        <img src="{{imgPath}}" class="art-img">
+    <div class="col container">
+        <div class="row">
+            <img src="{{imgPath}}" class="profile-img">
+            <p>{{username}}</p>
+        </div>
+        
         <p>{{text}}</p>
     </div>
 </a>
