--- a/src/app/main-feed/main-feed.component.html
+++ b/src/app/main-feed/main-feed.component.html
@@ -1,4 +1,6 @@
 <div>
     <h3>Main Feed</h3>
-    test
+    <a *ngFor="let item of feedItems; index as i;">
+        <app-feed-item [text]="item[0]" [imgPath]="item[1]" [link]="" [username]="item[2]"></app-feed-item>
+    </a>
 </div>
