--- a/src/app/profile-page/profile-page.component.html
+++ b/src/app/profile-page/profile-page.component.html
@@ -1,7 +1,7 @@
 <div class="flex-grid">
     <div class="col" style="text-align: left;padding: 3em;">
         <h3>Profile Info</h3>
-        <img src="assets/img/profile-img.png" class="art-img">
+        <img src="assets/img/profile-img.png" class="art-img profile-img">
         <p>
             <b>{{firstName}} {{lastName}}</b>
             <br>
