--- a/src/app/feed-item/feed-item.component.css
+++ b/src/app/feed-item/feed-item.component.css
@@ -1,18 +1,39 @@
 .art-img {
-    width: 120px;
-    height: 120px;
-    background-color: grey;
-    margin: 0 1em;
-  }
-  div {
-    display: flex;
-    align-items: center;
-    margin: .5em .5em;
-  }
-  a {
-    text-decoration: none;
-    color: black;
-  }
-  div:hover {
-    opacity: 75%;
-  }
+  width: 120px;
+  height: 120px;
+  background-color: grey;
+  margin: 0 1em;
+}
+.col {
+  display: flex;
+  align-items: center;
+  margin: .5em .5em;
+}
+.row {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: .5em .5em;
+  
+}
+a {
+  text-decoration: none;
+  color: black;
+}
+div:hover {
+  opacity: 75%;
+}
+.container {
+  background-color: rgba(255, 0, 0, 0.2);
+  padding-right: 1em;
+}
+.profile-img {
+  width: 40px;
+  height: 40px;
+  padding: 0;
+  clip-path: circle(50% at 50% 50%);
+}
+p{
+    margin: 0;
+    padding: 0;
+}
