--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,7 @@ body {
   margin: 1em 1em;
   text-align: center;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 .col::-webkit-scrollbar-track {
   display: none;
