--- a/src/styles.css
+++ b/src/styles.css
@@ -25,3 +25,9 @@ body {
   background-color: #000000;
   border: 2px solid #555555;
 }
+
+@media (max-width: 500px) {
+  .flex-grid {
+    display: block;
+  }
+}
