missing changes friends-recents

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -3,7 +3,5 @@
         <h3>Column 1</h3>
     </div>
     <app-main-feed [feedItems]="feedItems" class="col turquoise-bg"></app-main-feed>
-    <div class="col red-bg">
-        <h3>Column 3</h3>
-    </div>
+    <app-friends-recents [friendsRecentsItems]="friendsRecentsItems" class="col red-bg"></app-friends-recents>
 </div>
