--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -2,7 +2,7 @@
     <div class="col blue-bg">
         <h3>Column 1</h3>
     </div>
-    <app-main-feed [feedItems]="feedItems" class="col turquoise-bg"></app-main-feed>
+    <app-main-feed [feedItems]="feedItems"></app-main-feed>
   <div class="darkgrey-bg">
     <app-friends-recents [friendsRecentsItems]="friendsRecentsItems" class="col grey-bg"></app-friends-recents>
     <app-friends-playlists-recommend [friendsPlaylistsRecommendItems]="friendsPlaylistsRecommendItems" class="col grey-bg"></app-friends-playlists-recommend>
