added components to fill out recommended music, expanded flexbox so there is less overflow over x axis, this was also caused by the css containers of the items being too wide so I went ahead and adjusted the width of the css containers for the item components to fit the flexboxes todo: create and populate event calendar item components and fill out top bar

--- a/src/app/feed-item/feed-item.component.css
+++ b/src/app/feed-item/feed-item.component.css
@@ -26,6 +26,7 @@ div:hover {
 .container {
   background-color: rgba(255, 0, 0, 0.2);
   padding-right: 1em;
+  width: 1150px;
 }
 .profile-img {
   width: 40px;
