--- a/src/app/friends-playlists-recommend-item/friends-playlists-recommend-item.component.css
+++ b/src/app/friends-playlists-recommend-item/friends-playlists-recommend-item.component.css
@@ -33,8 +33,9 @@ div:hover {
   opacity: 75%;
 }
 .container {
-  background-color: rgba(255, 0, 0, 0.2);
+  background-color: rgba(0, 255, 255, 0.2);
   padding-right: 1em;
+  width: 550px;
 }
 .profile-img {
   width: 40px;
