minor aesthetic changes--   rounded off css containers for items   reduced flexbox size to better fit a 24" monitor at 100% on firefox   set container item widths to be percentage based instead of px width so it follows flexbox width changes   hid scrollbars   removed duplicate titles   removed flexbox border   added more playlists examples to rec. playlist section
still to-do::
  populate event calendar and top-bar

--- a/src/app/feed-item/feed-item.component.css
+++ b/src/app/feed-item/feed-item.component.css
@@ -26,7 +26,9 @@ div:hover {
 .container {
   background-color: rgba(255, 0, 0, 0.2);
   padding-right: 1em;
-  width: 1150px;
+  width: 97.5%;
+  border-radius: 20px;
+
 }
 .profile-img {
   width: 40px;
