--- a/src/app/general-recommend-music-item/general-recommend-music-item.component.css
+++ b/src/app/general-recommend-music-item/general-recommend-music-item.component.css
@@ -35,7 +35,9 @@ div:hover {
 .container {
   background-color: rgba(255, 255, 0, 0.2);
   padding-right: 1em;
-  width: 550px;
+  width: 96%;
+  border-radius: 20px;
+
 }
 .profile-img {
   width: 40px;
