--- a/src/app/main-page/main-page.component.css
+++ b/src/app/main-page/main-page.component.css
@@ -1,7 +1,7 @@
 #flexcontainer {
-  width: 2500px;
-  height: 1000px;
-  border: 3px solid black;
+  width: 1750px;
+  height: 900px;
+  border: 3px hidden;
   display: flex;
   flex-flow: column wrap;
   padding: 5px;
@@ -18,7 +18,7 @@
   text-align: center;
   overflow-y: auto;	
   height: 100px;
-  width: 190%;
+  width: 133%;
   background: #2D6F22;
   border-radius: 20px;
   border: 1px solid #555555;
@@ -31,9 +31,13 @@
   width: 24%;
   background: #9CA7DF;
   border-radius: 20px;
-  overflow-y: auto;	
+  overflow-y: scroll;
+  scrollbar-width: none;
   border: 1px solid #555555;
   gap: 5px;
+}
+.rec-mus::-webkit-scrollbar { 
+    display: none;  /* Safari and Chrome */
 }
 
 .event-cal {
@@ -47,6 +51,9 @@
   border: 1px solid #555555;
   gap: 5px;
 }
+.event-cal::-webkit-scrollbar { 
+    display: none;  /* Safari and Chrome */
+}
 
 .scroll-fd {
   margin: 0 .75em;
@@ -58,6 +65,9 @@
   overflow-y: auto;
   border: 1px solid #555555;
   gap: 5px;
+}
+.scroll-fd::-webkit-scrollbar { 
+    display: none;  /* Safari and Chrome */
 }
 
 .hilht-plylst {
@@ -71,6 +81,9 @@
   border: 1px solid #555555;
   gap: 5px;
 }
+.hilht-plylst::-webkit-scrollbar { 
+    display: none;  /* Safari and Chrome */
+}
 
 .frnd-act {
   margin: 0 .75em;
@@ -83,6 +96,9 @@
   overflow-y: auto;
   border: 1px solid #555555;
   gap: 5px;
+}
+.frnd-act::-webkit-scrollbar { 
+    display: none;  /* Safari and Chrome */
 }
 
 .blue-bg {
