--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -18,20 +18,7 @@
 	
 	<div class="event-cal">
         <h3>Event Calendar</h3>
-			<app-info-image></app-info-image>
-			<app-info-image></app-info-image>	
-			<app-info-image></app-info-image>
-			<app-info-image></app-info-image>
-			<app-info-image></app-info-image>
-			<app-info-image></app-info-image>
-			<app-info-image></app-info-image>
-			<app-info-image></app-info-image>
-			<app-info-image></app-info-image>	
-			<app-info-image></app-info-image>
-			<app-info-image></app-info-image>
-			<app-info-image></app-info-image>
-			<app-info-image></app-info-image>
-			<app-info-image></app-info-image>
+			<app-upcoming-events [upcomingEventsItems]="upcomingEventsItems"></app-upcoming-events>
     </div>
 	
 	
