--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -12,12 +12,12 @@
 <div id="flexcontainer">	 
 
 	
-	<div class="rec-mus">
+	<div class="col rec-mus">
         <h3>Recommended Music</h3>  
 			<app-general-recommend-music [generalRecommendMusicItems]="generalRecommendMusicItems"></app-general-recommend-music>
     </div>
 	
-	<div class="event-cal">
+	<div class="col event-cal">
         <h3>Event Calendar</h3>
 			<app-upcoming-events [upcomingEventsItems]="upcomingEventsItems"></app-upcoming-events>
     </div>
@@ -28,12 +28,12 @@
 			 <app-main-feed [feedItems]="feedItems"></app-main-feed>
     </div>
 	
-	<div class="frnd-act">
+	<div class="col frnd-act">
         <h3></h3>        
 			<app-friends-recents [friendsRecentsItems]="friendsRecentsItems"></app-friends-recents>
 	</div>
 		
-		<div class="hilht-plylst">
+	<div class="col hilht-plylst">
         <h3></h3>
 			<app-friends-playlists-recommend [friendsPlaylistsRecommendItems]="friendsPlaylistsRecommendItems"></app-friends-playlists-recommend>
 
