created a playlist popout component and its associated items component to fill playlist popout playlist popout has been integrated into main page as a separate div for testing and viewing purposes   this can be removed and placed where appropriate

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -11,7 +11,6 @@
 
 <div id="flexcontainer">	 
 
-	
 	<div class="col rec-mus">
         <h3>Recommended Music</h3>  
 			<app-general-recommend-music [generalRecommendMusicItems]="generalRecommendMusicItems"></app-general-recommend-music>
@@ -40,3 +39,6 @@
     </div>
 </div>
 
+<div>
+	<app-playlist-popout></app-playlist-popout>
+</div>
