added comment popup::    created a comment popup like the playlist popup, is mostly for show       can't comment or anything, but it has a submit comment button     is displayed on main page for debugging and display purposes ]       should be removed from main page before submission added buttons::    share button into playlist popup    like, dislike, and add buttons to recommended music items    add to calendar and comment button to event calendar         comment button brings up the comment popup as a modal

--- a/src/app/general-recommend-music-item/general-recommend-music-item.component.html
+++ b/src/app/general-recommend-music-item/general-recommend-music-item.component.html
@@ -12,5 +12,8 @@
         <p>{{artist}}</p>
         <p>{{album}}</p>
         </div>
+		<button class="button" title="Like">👍</button>
+		<button class="button" title="Dislike">👎</button>
+		<button class="button" title="Save to Favorite">➕</button>
     </div>
 </a>
