--- a/src/app/playlist-popout/playlist-popout.component.html
+++ b/src/app/playlist-popout/playlist-popout.component.html
@@ -9,10 +9,9 @@
             <br>
             <b>Song Count: {{numSongs}}</b>
             <br>
-            <b>Playlist Curator: {{playlistCrtr}}</b>
-            
+            <b>Playlist Curator: {{playlistCrtr}}</b>            
         </p>
-
+		<button class = "button" title="Share Playlist">SHARE</button>
     <div class="col green-bg">
         <h3>Song List</h3>
         <a *ngFor="let item of playlistItems; index as i;">
