--- a/src/app/comment-popout/comment-popout.component.css
+++ b/src/app/comment-popout/comment-popout.component.css
@@ -23,18 +23,32 @@
 }
 .button{
   border: none;
-  width: 75px;
-  height: 32px;
+  width: 150px;
+  height: 50px;
   background-color: #228B22;
   transition: all ease-in-out 0.2s;
   cursor: pointer;
   border-radius: 20px;
+  float: right;
 
 }
 .button:hover{
   border: 1px solid #888;
   background-color: #7851a9 ;
 }
+.comment-box {
+  height: 120px;
+  width: 450px;
+  background: #d3d3d3 ;
+  border-radius: 20px;
+  float:right;
+}
+.hidden-modal .modal-content {
+  background: none;
+  border: none;
+}
+
+
 
 .art-img {
   width: 120px;
