--- a/src/app/main-page/main-page.component.css
+++ b/src/app/main-page/main-page.component.css
@@ -119,6 +119,11 @@ display: flex;
   flex-direction: column;
 }
 
+.hidden-modal .modal-content {
+  background: none;
+  border: none;
+}
+
 @media (max-width: 400px) {
   .flex-grid {
     display: block;
