Added in Popouts to use as modals::   Added Song Info Popout   Added Event Info Popout Used Modals for Popouts::   Clicking on the info button on the event calendar brings up event info popout   Clicking on comment button in event calendar brings up comment popup   Clicking on comment button in event info brings up comment popoup   Clicking on songs in playlist popup brings up song info popup   Clicking items in recommended music brings up song info popup      buttons also bring-up that popup, but buttons are otherwise non-functional   Clicking on comment button in song info brings up comment popup

--- a/src/app/general-recommend-music-item/general-recommend-music-item.component.css
+++ b/src/app/general-recommend-music-item/general-recommend-music-item.component.css
@@ -39,6 +39,11 @@
   background-color: #0067A5 ;
 }
 
+.hidden-modal .modal-content {
+  background: none;
+  border: none;
+}
+
 a {
   text-decoration: none;
   color: black;
