--- a/src/app/event-info-popout/event-info-popout.component.html
+++ b/src/app/event-info-popout/event-info-popout.component.html
@@ -1,22 +1,32 @@
 <div id="flexcontainer">
     <div class="col blue-bg" style="text-align: left;padding: 3em;">
-        <h3>Playlist Info</h3>
-        <img src="assets/img/profile-img.png" class="art-img playlist-img">
+        <h3>Event Info</h3>
+        <img src="https://picsum.photos/200" class="art-img playlist-img">
         <p>
-            <b>{{playlistName}}</b>
+            <b>{{eventName}}</b>
             <br>
-            <b>Total Runtime: {{playlistLen}}</b>
+            <b>Date: {{date}}</b>
             <br>
-            <b>Song Count: {{numSongs}}</b>
+            <b>Venue: {{venue}}</b>
             <br>
-            <b>Playlist Curator: {{playlistCrtr}}</b>            
+            <b>Hosted By: {{host}}</b>            
         </p>
-		<button class = "button" title="Share Playlist">SHARE</button>
+		<button class = "button" title="Share Event">SHARE</button>
+		<button class="button" title="Like">👍</button>
+		<button class="button" title="Dislike">👎</button>
+		<button class="button" title="Add to Calendar">📅</button>
+		<button class="button" title="Comment" (click)="open(comment)">💬</button>
+		
     <div class="col green-bg">
-        <h3>Song List</h3>
+        <h3>General Info</h3>
         <a *ngFor="let item of eventInfoPopoutItems; index as i;">
-            <app-event-info-popout-item [imgPath]="item[0]" [albumPath]="item[1]" [song]="item[2]" [artist]="item[3]" [album]="item[4]" [link]=""></app-event-info-popout-item>
+            <app-event-info-popout-item [infoType]="item[0]" [info]="item[1]" [link]=""></app-event-info-popout-item>
         </a>
     </div>
 
 </div>
+<ng-template #comment let-modal>
+
+    <app-comment-popout></app-comment-popout>
+
+</ng-template>
