--- a/src/app/song-info-popout-item/song-info-popout-item.component.html
+++ b/src/app/song-info-popout-item/song-info-popout-item.component.html
@@ -1,15 +1,8 @@
-<a href="{{link}}">
+<a>
     <div class="col container">
-        <div class="row">
-            <img src="{{imgPath}}" class="profile-img">  
-        </div>
-        <div class="row">
-        <img src="{{albumPath}}" class="album-img">
-        </div>
         <div class="info">
-        <p>{{song}}</p>
-        <p>{{artist}}</p>
-        <p>{{album}}</p>
+        <H3>{{infoType}}</H3>
+        <p>{{info}}</p>
         </div>
     </div>
 </a>
