--- a/src/app/song-info-popout/song-info-popout.component.css
+++ b/src/app/song-info-popout/song-info-popout.component.css
@@ -12,7 +12,6 @@
   border-radius: 20px;
 }
 .green-bg {
-  height: 600px;
   background: #49821D;
   border-radius: 20px;
 }
@@ -29,7 +28,7 @@
   transition: all ease-in-out 0.2s;
   cursor: pointer;
   border-radius: 20px;
-
+  margin: .1em;
 }
 .button:hover{
   border: 1px solid #888;
