added modal popouts on click for::   friends recent items - pops up song info   friends and public playlists items - pops up playlist info   main feed items - popsup comments

--- a/src/app/feed-item/feed-item.component.css
+++ b/src/app/feed-item/feed-item.component.css
@@ -29,6 +29,10 @@ div:hover {
   border-radius: 20px;
 
 }
+.hidden-modal .modal-content {
+  background: none;
+  border: none;
+}
 .profile-img {
   width: 40px;
   height: 40px;
