--- a/src/app/event-info-popout-item/event-info-popout-item.component.css
+++ b/src/app/event-info-popout-item/event-info-popout-item.component.css
@@ -52,6 +52,10 @@ div:hover {
   padding: 0;
   clip-path: square(50% at 50% 50%);
 }
+.hidden-modal .modal-content {
+  background: none;
+  border: none;
+}
 
 p{
     margin: 0;
