--- a/src/app/feed-item/feed-item.component.html
+++ b/src/app/feed-item/feed-item.component.html
@@ -1,4 +1,4 @@
-<a href="{{link}}">
+<a (click)="open(comment)">
     <div class="col container">
         <div class="row">
             <img src="{{imgPath}}" class="profile-img">
@@ -8,3 +8,8 @@
         <p>{{text}}</p>
     </div>
 </a>
+<ng-template #comment let-modal>
+
+    <app-comment-popout></app-comment-popout>
+
+</ng-template>
