--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,33 +1,10 @@
 <nav ngbNav #nav="ngbNav" class="nav-tabs">
     <ng-container ngbNavItem>
-        <a ngbNavLink>Home Page</a>
-        <ng-template ngbNavContent>
-            <app-main-page></app-main-page>
-        </ng-template>
+        <a ngbNavLink routerLink="home">Home Page</a>
+
     </ng-container>
     <ng-container ngbNavItem>
-        <a ngbNavLink>Another Page</a>
-        <ng-template ngbNavContent>
-            <p>Sed commodo, leo at suscipit dictum, quam est porttitor sapien, eget sodales nibh
-                elit id diam. Nulla facilisi.
-                Donec egestas ligula vitae odio interdum aliquet. Duis lectus turpis, luctus eget
-                tincidunt eu, congue et odio.
-                Duis pharetra et nisl at faucibus. Quisque luctus pulvinar arcu, et molestie lectus
-                ultrices et. Sed diam urna,
-                egestas ut ipsum vel, volutpat volutpat neque. Praesent fringilla tortor arcu.
-                Vivamus faucibus nisl enim, nec
-                tristique ipsum euismod facilisis. Morbi ut bibendum est, eu tincidunt odio. Orci
-                varius natoque penatibus et
-                magnis dis parturient montes, nascetur ridiculus mus. Mauris aliquet odio ac lorem
-                aliquet ultricies in eget
-                neque. Phasellus nec tortor vel tellus pulvinar feugiat.</p>
-        </ng-template>
-    </ng-container>
-    <ng-container ngbNavItem>
-        <a ngbNavLink>Profile Page</a>
-        <ng-template ngbNavContent>
-            <app-profile-page></app-profile-page>
-        </ng-template>
+        <a ngbNavLink routerLink="profile">Profile Page</a>
     </ng-container>
 </nav>
 
