Added Album & Artist Info popouts to use in profile page   Clicking on highlighted albums/artists brings up Artist Info modal,   and can click on albums in Artist modal which brings up Album info modal,   which has a track listing and pops up Song info on track clicks
Small cleanup of background box heights so they're not too long, and relabeling some mislabeled buttons and fields

--- a/src/app/event-info-popout/event-info-popout.component.html
+++ b/src/app/event-info-popout/event-info-popout.component.html
@@ -12,9 +12,9 @@
             <b>Hosted By: {{host}}</b>            
         </p>
 		<button class = "button" title="Share Event">SHARE</button>
-		<button class="button" title="Like">👍</button>
-		<button class="button" title="Dislike">👎</button>
-		<button class="button" title="Add to Calendar">📅</button>
+		<button class="button" title="Like Event">👍</button>
+		<button class="button" title="Dislike Event">👎</button>
+		<button class="button" title="Add Event to Calendar">📅</button>
 		<button class="button" title="Comment" (click)="open(comment)">💬</button>
 		
     <div class="col green-bg">
