--- a/src/app/playlist-popout/playlist-popout.component.html
+++ b/src/app/playlist-popout/playlist-popout.component.html
@@ -13,7 +13,7 @@
         </p>
 		<button class = "button" title="Share Playlist">SHARE</button>
 		<button class="button" title="Like Playlist">👍</button>
-		<button class="button" title="Dislike Playlise">👎</button>
+		<button class="button" title="Dislike Playlist">👎</button>
 		<button class="button" title="Save to Favorite Playlists">➕</button>
 		<button class="button" title="Comment" (click)="open(comment)">💬</button>
     <div class="col green-bg">
