--- a/src/app/song-info-popout/song-info-popout.component.html
+++ b/src/app/song-info-popout/song-info-popout.component.html
@@ -14,7 +14,7 @@
 		<button class = "button" title="Share Song">SHARE</button>
 		<button class="button" title="Like Song">👍</button>
 		<button class="button" title="Dislike Song">👎</button>
-		<button class="button" title="Save to Favorite">➕</button>
+		<button class="button" title="Save to Favorite Songs">➕</button>
 		<button class="button" title="Comment" (click)="open(comment)">💬</button>
 		
     <div class="col green-bg">
