--- a/src/app/upcoming-events-item/upcoming-events-item.component.html
+++ b/src/app/upcoming-events-item/upcoming-events-item.component.html
@@ -11,9 +11,9 @@
          <p>{{venue}}</p>
          <p>{{date}}</p>
         </div>
-		<button class="button" title="Add to Cal">📅</button>
+		<button class="button" title="Add Event to Cal">📅</button>
 		<button class="button" title="Comment" (click)="open(comment)">💬</button>
-		<button class="button" title="Info" (click)="open(eventInfo)">ℹ️</button>
+		<button class="button" title="Event Info" (click)="open(eventInfo)">ℹ️</button>
     </div>
 </a>
 
