Added items for event info popout, now lineup is its own div with its own elements   Elements in event info lineup are Artist info elements   Artist info modal pops up when clicking on the artists in the event list.
Fixed a bug where clicking on albums from artist modal brought up album modal twice

--- a/src/app/event-info-popout/event-info-popout.component.html
+++ b/src/app/event-info-popout/event-info-popout.component.html
@@ -18,6 +18,12 @@
 		<button class="button" title="Comment" (click)="open(comment)">💬</button>
 		
     <div class="col green-bg">
+        <h3>Artist Lineup</h3>
+        <a (click)="open(albumInfo)" *ngFor="let item of eventLineup; index as i;">
+            <app-event-lineup-popout-item [imgPath]="item[0]" [albumPath]="item[1]" [artist]="item[2]" [link]=""></app-event-lineup-popout-item>
+        </a>
+    </div>
+	<div class="col green-bg">
         <h3>General Info</h3>
         <a *ngFor="let item of eventInfoPopoutItems; index as i;">
             <app-event-info-popout-item [infoType]="item[0]" [info]="item[1]" [link]=""></app-event-info-popout-item>
